--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,26 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-logo {
+
+.QueriedDevices {
+  height: 500px;
+  width: 100vw;
+}
+
+.device-flex {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+
+
+/* Boilerplate */
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +53,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
