--- a/src/App.css
+++ b/src/App.css
@@ -1,70 +1,65 @@
 .App {
-  text-align: center;
+  display: block;
   height: 100vh;
-  width: 80vw;
 }
 
-.search-module {
-  position: center;
+body {
+  background-color: seagreen;
+  /* display: flex;
+  align-content: center; */
 }
 
-/* .queried-devices {
-  height: 500px;
-  width: 100vw;
-  position: center;
-} */
-
-.queried-device {
-  position: center;
-  border-style: solid;
-  width: 25%;
-}
-
-.device-flex {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-}
-
-/* .device-description {
-  width: 50%;
-} */
-
-
-
-/* Boilerplate */
-
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.header {
+  background-color: red;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 10vh;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+  display: inline-flex;
+  justify-content: space-around;
+  align-items: top;
+  width: 100vw;
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.device-search, .saved-list {
+  display: inline-flex;
+  /* flex-basis: 1; */
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 40vw;
+  margin: 50px;
+}
+
+header, footer, h1, h2 {
+  text-align: center;
+  vertical-align: middle;
+}
+
+h1 {
+  font-size: 24px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+.device-record, .saved-device {
+  width: 30vw;
+  overflow-wrap: break-word;
+  border: 10px solid black;
+  padding: 10px;
+  background-color: lightyellow;
+  margin: 10px;
+}
+
+.footer {
+  background-color: blue;
+  height: 10vh;
+  width: 100vw;
+}
+
+
