--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,29 @@
 .App {
   display: block;
   height: 100vh;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+
 }
 
 body {
-  background-color: seagreen;
+  background-color: #4A4849;
   /* display: flex;
   align-content: center; */
 }
 
 .header {
-  background-color: red;
+  background-color: #32373B;
   justify-content: center;
-  height: 10vh;
+  height: 5vh;
   width: 100vw;
+  padding-top: 2.5vh;
 }
 
 main {
   display: inline-flex;
   justify-content: space-around;
   align-items: top;
-  width: 100vw;
+  width: 95vw;
   margin: 10px;
 }
 
@@ -37,6 +40,7 @@ main {
 header, footer, h1, h2 {
   text-align: center;
   vertical-align: middle;
+  color: #F4D6CC;
 }
 
 h1 {
@@ -45,21 +49,68 @@ h1 {
 
 h2 {
   font-size: 20px;
+  margin: 10px 0;
+  text-decoration: underline;
+}
+
+/* div for sticky footer */
+.content {
+  min-height: calc(100vh - 10vh);
+}
+
+.queried-devices, .saved-devices {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
 }
 
 .device-record, .saved-device {
   width: 30vw;
   overflow-wrap: break-word;
-  border: 10px solid black;
+  border: 3px solid #32373B;
   padding: 10px;
-  background-color: lightyellow;
+  background-color: #F4B860;
   margin: 10px;
+  border-radius: 15px;
+  line-height: 1.4;
 }
 
 .footer {
-  background-color: blue;
+  background-color: #32373B;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 10vh;
   width: 100vw;
 }
 
+.disclaimer-text {
+  width: 80vw;
+  align-self: center;
+  text-align: center;
+  color: #F4D6CC;
+  font-style: italic;
+}
 
+.disclaimer-text .disclaimer-field {
+  color: red;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.device-field, .notes-field {
+  font-style: italic;
+  font-weight: bold;
+  color: #C83E4D;
+}
+
+.user-notes {
+  border-top: 2px;
+  border-style: dotted;
+  margin-top: 5px;
+}
+
+a:visited {
+  color: #F4B860;
+}
